20220615: delete namespace update method
