# router/k8s/namespace_router.go
@@ -14,7 +14,7 @@ func (p *NamespaceRouter) InitNamespaceRouter(Router *gin.RouterGroup) {
 	{
 		namespaceGroup.POST("create", namespaceApi.Create)   // 创建 namespace
 		namespaceGroup.DELETE("delete", namespaceApi.Delete) // 删除 namespace
-		namespaceGroup.PUT("update", namespaceApi.Update)    // 更新 namespace 信息
+		// namespaceGroup.PUT("update", namespaceApi.Update)    // 更新 namespace 信息
 		namespaceGroup.GET("get", namespaceApi.Get)          // 获取单个 namespace 信息
 		namespaceGroup.GET("list", namespaceApi.List)        // 获取命名空间的所有 namespace 信息
 
